--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Android-HIT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="fragment_transaction">Transaction</string>
+    <string name="fragment_settings">Settings</string>
+    <string name="fragment_graphs">Graphs</string>
+    <string name="fragment_scan">Scan</string>
+
 </resources>
